refactoring hero sections

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,19 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  background-color: #10172A;
+  border-radius: 10px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #37BCF8;
+  border-radius: 10px;
+  width: 100%;
+}
